--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -12,7 +12,8 @@ on:
   push:
     branches: '*'
     tags:
-      - v*
+      - v[0-9][0-9].[0-9][0-9].[0-9]+
+      - v[0-9][0-9].[0-9][0-9].[0-9]+-pre.[0-9]+
   pull_request:
 
 jobs:
